# MiniMetersServer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LookAndFeel.h  MacOsHelpers.h  MacOsHelpers.mm  MiniMetersOpener.cpp  MiniMetersOpener.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SharedMemory.h  SpeexResampler.h  build_linux.sh  build_macos.sh  build_windows.cmd  config.h.in  httplib.h  ma_implementation_file.cpp
.github/workflows/: all.yml  build.yml
Assets/: SpaceMono-Bold.cpp  SpaceMono-Bold.h  bg.cpp  bg.h
